Changes to Master and Slave CubeMac code. Need to remove collaboration and add fixed schedule. Masters must be able to receive multiple control and data packets from slaves.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -13,7 +13,7 @@ num-rngs = 3
 # Network Parameters
 #
 *.radioMediumType = "IdealRadioMedium"
-*.numMasters = ${NM=2}
+*.numMasters = ${NM=1}
 *.numSlaves = ${NS=(${NM})}
 *.slavesPerMaster = ${SPM=(${NS}/${NM})}
 
@@ -109,7 +109,7 @@ num-rngs = 3
 # https://omnetpp.org/doc/inet/api-current/neddoc/inet.physicallayer.common.packetlevel.Radio.html
 # 
 *.node*[*].wlan[*].radioType = "IdealRadio"
-*.node*[*].wlan[0].radio.displayCommunicationRange = true
+#*.node*[*].wlan[0].radio.displayCommunicationRange = true
 
 # --- Radio: Medium (APSK)
 
@@ -143,8 +143,12 @@ num-rngs = 3
 *.nodeSlave[*].**.cy = 500m
 *.nodeSlave[*].**.cz = 0m
 *.nodeSlave[*].**.r = 75m
-*.nodeSlave[0].**.startAngle = (parentIndex() * (360deg/${NM})) + 5deg
-*.nodeSlave[1].**.startAngle = (parentIndex() * (360deg/${NM})) - 5deg # The rest
+*.nodeSlave[0].**.startAngle = (parentIndex() * (360deg/${NM})) + 10deg
+#*.nodeSlave[1].**.startAngle = (parentIndex() * (360deg/${NM}))
+#*.nodeSlave[2].**.startAngle = (parentIndex() * (360deg/${NM})) - 10deg
+
+#*.nodeSlave[..1].**.startAngle = (parentIndex() * (360deg/${NM})) + 5deg
+#*.nodeSlave[2..].**.startAngle = (parentIndex() * (360deg/${NM})) - 5deg # The rest
 # Not working
 #*.nodeSlave[..((${NS}/${SPM})-1)].**.startAngle = ((parentIndex()/${SPM}) * (360deg/${NM})) + 5deg
 #*.nodeSlave[(${NS}/${SPM})..].**.startAngle = ((parentIndex()/${SPM}) * (360deg/${NM})) - 5deg # The rest?
