Removed negotiation and setups. Nodes use fixed slots. Added code to allow one master to receive from multiple slaves in one slot. Still experiencing synchronization problems.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -91,16 +91,19 @@ num-rngs = 3
 #
 *.node*[*].wlan[*].macType = "CubeMacLayer"
 *.node*[*].wlan[*].mac.address = "auto"
-*.node*[*].wlan[*].mac.slotDuration = 100ms
+*.node*[*].wlan[*].mac.slotDuration = 100ms # Make shorter?
 *.node*[*].wlan[*].mac.headerLength = 10B
 *.node*[*].wlan[*].mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
-*.node*[*].wlan[*].mac.numSlots = (${NM})+1 # +1 for the slave uplink slot
+*.node*[*].wlan[*].mac.numSlots = (${NM})+1 # +1 for the uplink slot
 *.node*[*].wlan[*].mac.queueLength = 10*${NM}
 # Added
-*.nodeSlave[*].wlan[*].mac.isSlave = true
-*.node*[*].wlan[*].mac.reservedMobileSlots = 0 # !!! Imporant to hold this at zero until it is removed
-#
+*.nodeSlave[*].wlan[*].mac.startTime = 1s
+*.nodeSlave[*].wlan[*].mac.slaveId = parentIndex() # (Not yet used) Used to determine small offset in uplink slot
+*.nodeMaster[*].wlan[*].mac.masterId = parentIndex() # Used to assign static slots within frame
+*.nodeSlave[*].wlan[*].mac.isSlave = true # Determines node behaviour mode
+*.nodeSlave[*].wlan[*].mac.slavesInCluster = ${SPM} # Used to let Master know how many control messages to expect in uplink slot
 
+# TODO: Try this out again
 #*.node*[*].wlan[*].mac.bitrate = 2Mbps # How does this affect the transmitter bitrate?
 #*.node*[*].wlan[*].mac.radioModule = "^.radio" # Path to radio module
 
