Sync issues fixed. Added cluster IDs. Working one slave one master.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -14,7 +14,7 @@ num-rngs = 3
 #
 *.radioMediumType = "IdealRadioMedium"
 *.numMasters = ${NM=1}
-*.numSlaves = ${NS=(${NM})}
+*.numSlaves = ${NS=(${NM})*2}
 *.slavesPerMaster = ${SPM=(${NS}/${NM})}
 
 #
@@ -63,8 +63,8 @@ num-rngs = 3
 *.nodeSlave[*].udpApp[0].packetName = "UDPDataSlave"
 *.nodeSlave[*].udpApp[0].destPort = 5000
 *.nodeSlave[*].udpApp[0].messageLength = exponential(128B)
-*.nodeSlave[*].udpApp[0].startTime = 30s
-*.nodeSlave[*].udpApp[0].sendInterval = exponential(100ms)
+*.nodeSlave[*].udpApp[0].startTime = 5s
+*.nodeSlave[*].udpApp[0].sendInterval = exponential(200ms)
 #*.nodeSlave[*].udpApp[0].stopTime = # Default -1 (forever)
 #*.nodeSlave[*].udpApp[0].localPort = # Default -1
 #*.nodeSlave[*].udpApp[0].localAddress = # ""
@@ -97,11 +97,16 @@ num-rngs = 3
 *.node*[*].wlan[*].mac.numSlots = (${NM})+1 # +1 for the uplink slot
 *.node*[*].wlan[*].mac.queueLength = 10*${NM}
 # Added
-*.nodeSlave[*].wlan[*].mac.startTime = 1s
-*.nodeSlave[*].wlan[*].mac.slaveId = parentIndex() # (Not yet used) Used to determine small offset in uplink slot
-*.nodeMaster[*].wlan[*].mac.masterId = parentIndex() # Used to assign static slots within frame
+*.node*[*].wlan[*].mac.startTime = 1s
+
+*.nodeSlave[*].wlan[*].mac.slaveId = parentIndex() # Used to determine small offset in uplink slot --- Must be unique
 *.nodeSlave[*].wlan[*].mac.isSlave = true # Determines node behaviour mode
-*.nodeSlave[*].wlan[*].mac.slavesInCluster = ${SPM} # Used to let Master know how many control messages to expect in uplink slot
+
+*.nodeMaster[*].wlan[*].mac.masterId = parentIndex() # Used to assign static slots within frame --- Must be unique
+*.nodeMaster[*].wlan[*].mac.slavesInCluster = ${SPM} # Used to let Master know how many control messages to expect in uplink slot
+
+# TODO: Do this in a less terrible way
+*.node*[0].wlan[*].mac.clusterId = 0
 
 # TODO: Try this out again
 #*.node*[*].wlan[*].mac.bitrate = 2Mbps # How does this affect the transmitter bitrate?
@@ -147,7 +152,7 @@ num-rngs = 3
 *.nodeSlave[*].**.cz = 0m
 *.nodeSlave[*].**.r = 75m
 *.nodeSlave[0].**.startAngle = (parentIndex() * (360deg/${NM})) + 10deg
-#*.nodeSlave[1].**.startAngle = (parentIndex() * (360deg/${NM}))
+*.nodeSlave[1].**.startAngle = (parentIndex() * (360deg/${NM}))
 #*.nodeSlave[2].**.startAngle = (parentIndex() * (360deg/${NM})) - 10deg
 
 #*.nodeSlave[..1].**.startAngle = (parentIndex() * (360deg/${NM})) + 5deg
