Slaves no longer send control messages. Masters appear to be wrongly dropping packets which is perhaps messing up address resolution and routing.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -25,14 +25,13 @@ num-rngs = 3
 #
 # --- NodeBase
 #*.nodeMaster[*].hasStatus = false
-#*.nodeMaster[*].forwarding = true
 #*.nodeMaster[*].energyStorageType = ""
 #*.nodeMaster[*].energyGeneratorType = ""
 # --- StandardHost
 *.nodeMaster[*].numUdpApps = 1
 *.nodeSlave[*].numUdpApps = 1
 # --- AODVRouter
-# TODO Explore AODV example
+# TODO: Explore AODV example/code
 # See link: routingtable, pcap, aodv(many parameters)
 
 #
@@ -49,7 +48,6 @@ num-rngs = 3
 
 # https://omnetpp.org/doc/inet/api-current/neddoc/index.html?p=inet.applications.udpapp.UDPBasicApp.html
 #
-# !!! Master NOT routing slave packets while using UDPBasicApp
 #*.nodeMaster[1..].udpApp[0].typename = "UDPBasicApp"
 #*.nodeMaster[1..].udpApp[0].destAddresses = "nodeMaster[0]"
 #*.nodeMaster[1..].udpApp[0].packetName = "UDPDataMaster"
@@ -58,13 +56,16 @@ num-rngs = 3
 #*.nodeMaster[1..].udpApp[0].startTime = 30s
 #*.nodeMaster[1..].udpApp[0].sendInterval = exponential(100ms)
 
-*.nodeSlave[*].udpApp[0].typename = "UDPBasicApp"
-*.nodeSlave[*].udpApp[0].destAddresses = "nodeMaster[0]"
-*.nodeSlave[*].udpApp[0].packetName = "UDPDataSlave"
-*.nodeSlave[*].udpApp[0].destPort = 5000
-*.nodeSlave[*].udpApp[0].messageLength = exponential(128B)
-*.nodeSlave[*].udpApp[0].startTime = 5s
-*.nodeSlave[*].udpApp[0].sendInterval = exponential(200ms)
+*.nodeSlave[0].udpApp[0].typename = "UDPSink"
+*.nodeSlave[0].udpApp[0].localPort = 5000
+
+*.nodeSlave[1].udpApp[0].typename = "UDPBasicApp"
+*.nodeSlave[1].udpApp[0].destAddresses = "nodeMaster[0]"
+*.nodeSlave[1].udpApp[0].packetName = "UDPDataSlave"
+*.nodeSlave[1].udpApp[0].destPort = 5000
+*.nodeSlave[1].udpApp[0].messageLength = exponential(128B)
+*.nodeSlave[1].udpApp[0].startTime = 5s
+*.nodeSlave[1].udpApp[0].sendInterval = exponential(200ms)
 #*.nodeSlave[*].udpApp[0].stopTime = # Default -1 (forever)
 #*.nodeSlave[*].udpApp[0].localPort = # Default -1
 #*.nodeSlave[*].udpApp[0].localAddress = # ""
@@ -72,13 +73,15 @@ num-rngs = 3
 # ... More params available
 
 #
-# Routing
+# Network
 #
-#**.routingTable.netmaskRoutes = ""
-**.configurator.config = xml("<config><interface hosts='*' address='10.10.x.x' netmask='255.255.0.0'/></config>")
-**.configurator.addStaticRoutes = false
-**.configurator.optimizeRoutes = false
-**.forwarding = true
+**.networkLayer.arpType = "GlobalARP"
+
+*.configurator.config = xml("<config><interface hosts='**' address='10.0.0.x' netmask='255.255.255.0'/><autoroute metric='errorRate'/></config>")
+*.configurator.optimizeRoutes = false
+**.routingTable.netmaskRoutes = ""
+#**.configurator.optimizeRoutes = false
+#**.forwarding = true
 
 #
 # NIC
@@ -103,7 +106,8 @@ num-rngs = 3
 *.nodeSlave[*].wlan[*].mac.isSlave = true # Determines node behaviour mode
 
 *.nodeMaster[*].wlan[*].mac.masterId = parentIndex() # Used to assign static slots within frame --- Must be unique
-*.nodeMaster[*].wlan[*].mac.slavesInCluster = ${SPM} # Used to let Master know how many control messages to expect in uplink slot
+*.node*[*].wlan[*].mac.slavesInCluster = 1 # Used to let Master know how many control messages to expect in uplink slot
+#*.node*[*].wlan[*].mac.slavesInCluster = ${SPM} # Used to let Master know how many control messages to expect in uplink slot
 
 # TODO: Do this in a less terrible way
 *.node*[0].wlan[*].mac.clusterId = 0
