CubeMac just about working using WirelessHost as node type. Slave CDMA will need more hacking to get 'right'.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -13,7 +13,12 @@ num-rngs = 3
 # Network Parameters
 #
 *.radioMediumType = "IdealRadioMedium"
-*.numMasters = ${NM=1}
+
+# ... ... *sigh*
+*.radioMedium.mediumLimitCache.maxTransmissionDuration= 10s
+*.radioMedium.mediumLimitCache.minInterferenceTime = 10s
+
+*.numMasters = ${NM=2}
 *.numSlaves = ${NS=(${NM})*2}
 *.slavesPerMaster = ${SPM=(${NS}/${NM})}
 
@@ -40,8 +45,8 @@ num-rngs = 3
 # https://omnetpp.org/doc/inet/api-current/neddoc/index.html?p=inet.applications.udpapp.UDPSink.html
 #
 # --- Master 0
-*.nodeMaster[*].udpApp[0].typename = "UDPSink"
-*.nodeMaster[*].udpApp[0].localPort = 5000
+*.nodeMaster[0].udpApp[0].typename = "UDPSink"
+*.nodeMaster[0].udpApp[0].localPort = 5000
 #*.nodeMaster[0].udpApp[0].startTime = # Default 0s
 #*.nodeMaster[0].udpApp[0].stopTime = # Default -1 (forever)
 
@@ -56,16 +61,24 @@ num-rngs = 3
 #*.nodeMaster[1..].udpApp[0].startTime = 30s
 #*.nodeMaster[1..].udpApp[0].sendInterval = exponential(100ms)
 
-*.nodeSlave[0].udpApp[0].typename = "UDPSink"
-*.nodeSlave[0].udpApp[0].localPort = 5000
+#*.nodeSlave[0].udpApp[0].typename = "UDPSink"
+#*.nodeSlave[0].udpApp[0].localPort = 5000
 
-*.nodeSlave[1].udpApp[0].typename = "UDPBasicApp"
-*.nodeSlave[1].udpApp[0].destAddresses = "nodeMaster[0]"
-*.nodeSlave[1].udpApp[0].packetName = "UDPDataSlave"
-*.nodeSlave[1].udpApp[0].destPort = 5000
-*.nodeSlave[1].udpApp[0].messageLength = exponential(128B)
-*.nodeSlave[1].udpApp[0].startTime = 5s
-*.nodeSlave[1].udpApp[0].sendInterval = exponential(200ms)
+*.nodeMaster[1].udpApp[0].typename = "UDPBasicApp"
+*.nodeMaster[1].udpApp[0].destAddresses = "nodeMaster[0]"
+*.nodeMaster[1].udpApp[0].packetName = "UDPDataMaster1"
+*.nodeMaster[1].udpApp[0].destPort = 5000
+*.nodeMaster[1].udpApp[0].messageLength = exponential(128B)
+*.nodeMaster[1].udpApp[0].startTime = 2s
+*.nodeMaster[1].udpApp[0].sendInterval = exponential(200ms)
+
+*.nodeSlave[*].udpApp[0].typename = "UDPBasicApp"
+*.nodeSlave[*].udpApp[0].destAddresses = "nodeMaster[0]"
+*.nodeSlave[*].udpApp[0].packetName = "UDPDataSlave1"
+*.nodeSlave[*].udpApp[0].destPort = 5000
+*.nodeSlave[*].udpApp[0].messageLength = exponential(128B)
+*.nodeSlave[*].udpApp[0].startTime = 2s
+*.nodeSlave[*].udpApp[0].sendInterval = exponential(200ms)
 #*.nodeSlave[*].udpApp[0].stopTime = # Default -1 (forever)
 #*.nodeSlave[*].udpApp[0].localPort = # Default -1
 #*.nodeSlave[*].udpApp[0].localAddress = # ""
@@ -102,15 +115,26 @@ num-rngs = 3
 # Added
 *.node*[*].wlan[*].mac.startTime = 1s
 
-*.nodeSlave[*].wlan[*].mac.slaveId = parentIndex() # Used to determine small offset in uplink slot --- Must be unique
 *.nodeSlave[*].wlan[*].mac.isSlave = true # Determines node behaviour mode
 
-*.nodeMaster[*].wlan[*].mac.masterId = parentIndex() # Used to assign static slots within frame --- Must be unique
-*.node*[*].wlan[*].mac.slavesInCluster = 1 # Used to let Master know how many control messages to expect in uplink slot
-#*.node*[*].wlan[*].mac.slavesInCluster = ${SPM} # Used to let Master know how many control messages to expect in uplink slot
+# How to get parent index of parent?
+*.nodeSlave[0].wlan[*].mac.slaveId = 0 # Used to determine small offset in uplink slot --- Must be unique
+*.nodeSlave[1].wlan[*].mac.slaveId = 0 
+*.nodeSlave[2].wlan[*].mac.slaveId = 1 
+*.nodeSlave[3].wlan[*].mac.slaveId = 1 
 
-# TODO: Do this in a less terrible way
-*.node*[0].wlan[*].mac.clusterId = 0
+*.nodeSlave[0].wlan[*].mac.clusterId = 0 
+*.nodeSlave[1].wlan[*].mac.clusterId = 1
+*.nodeSlave[2].wlan[*].mac.clusterId = 0 
+*.nodeSlave[3].wlan[*].mac.clusterId = 1
+
+*.nodeMaster[0].wlan[*].mac.masterId = 0 # Used to assign static slots within frame --- Must be unique
+*.nodeMaster[1].wlan[*].mac.masterId = 1
+
+*.nodeMaster[0].wlan[*].mac.clusterId = 0
+*.nodeMaster[1].wlan[*].mac.clusterId = 1
+
+*.node*[*].wlan[*].mac.slavesInCluster = ${SPM} # Used to let Master know how many control messages to expect in uplink slot
 
 # TODO: Try this out again
 #*.node*[*].wlan[*].mac.bitrate = 2Mbps # How does this affect the transmitter bitrate?
@@ -121,7 +145,7 @@ num-rngs = 3
 # https://omnetpp.org/doc/inet/api-current/neddoc/inet.physicallayer.common.packetlevel.Radio.html
 # 
 *.node*[*].wlan[*].radioType = "IdealRadio"
-#*.node*[*].wlan[0].radio.displayCommunicationRange = true
+*.node*[*].wlan[0].radio.displayCommunicationRange = true
 
 # --- Radio: Medium (APSK)
 
@@ -155,9 +179,8 @@ num-rngs = 3
 *.nodeSlave[*].**.cy = 500m
 *.nodeSlave[*].**.cz = 0m
 *.nodeSlave[*].**.r = 75m
-*.nodeSlave[0].**.startAngle = (parentIndex() * (360deg/${NM})) + 10deg
-*.nodeSlave[1].**.startAngle = (parentIndex() * (360deg/${NM}))
-#*.nodeSlave[2].**.startAngle = (parentIndex() * (360deg/${NM})) - 10deg
+*.nodeSlave[..1].**.startAngle = (parentIndex() * (360deg/${NM})) + 10deg
+*.nodeSlave[2..].**.startAngle = (parentIndex() * (360deg/${NM})) - 10deg
 
 #*.nodeSlave[..1].**.startAngle = (parentIndex() * (360deg/${NM})) + 5deg
 #*.nodeSlave[2..].**.startAngle = (parentIndex() * (360deg/${NM})) - 5deg # The rest
