Removed master control packet logic. CubeMac not yet working with AODVRouters.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -114,6 +114,7 @@ num-rngs = 3
 *.node*[*].wlan[*].mac.queueLength = 10*${NM}
 # Added
 *.node*[*].wlan[*].mac.startTime = 1s
+*.node*[*].wlan[*].mac.timeoutDuration = 0.02s
 
 *.nodeSlave[*].wlan[*].mac.isSlave = true # Determines node behaviour mode
 
