Added parameter for inter-slave communication spacing. Added scenario which illustrates current problem with slave packets being ignored.

--- a/Simulation/OMNeT++/CubeSats/.tkenvrc
+++ b/Simulation/OMNeT++/CubeSats/.tkenvrc
@@ -1,4 +1,4 @@
 # Partial OMNeT++/Tkenv config file -- see $HOME/.tkenvrc as well
-config default-configname	{BaseConfig}
+config default-configname	{One}
 config default-runnumber	{0}
 
