--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -15,10 +15,10 @@ num-rngs = 3
 *.radioMediumType = "IdealRadioMedium"
 
 # ... ... *sigh*
-*.radioMedium.mediumLimitCache.maxTransmissionDuration= 10s
-*.radioMedium.mediumLimitCache.minInterferenceTime = 10s
+*.radioMedium.mediumLimitCache.maxTransmissionDuration= 999s
+*.radioMedium.mediumLimitCache.minInterferenceTime = 999s
 
-*.numMasters = ${NM=2}
+*.numMasters = ${NM=1}
 *.numSlaves = ${NS=(${NM})*2}
 *.slavesPerMaster = ${SPM=(${NS}/${NM})}
 
@@ -61,16 +61,8 @@ num-rngs = 3
 #*.nodeMaster[1..].udpApp[0].startTime = 30s
 #*.nodeMaster[1..].udpApp[0].sendInterval = exponential(100ms)
 
-#*.nodeSlave[0].udpApp[0].typename = "UDPSink"
-#*.nodeSlave[0].udpApp[0].localPort = 5000
-
-*.nodeMaster[1].udpApp[0].typename = "UDPBasicApp"
-*.nodeMaster[1].udpApp[0].destAddresses = "nodeMaster[0]"
-*.nodeMaster[1].udpApp[0].packetName = "UDPDataMaster1"
-*.nodeMaster[1].udpApp[0].destPort = 5000
-*.nodeMaster[1].udpApp[0].messageLength = exponential(128B)
-*.nodeMaster[1].udpApp[0].startTime = 2s
-*.nodeMaster[1].udpApp[0].sendInterval = exponential(200ms)
+*.nodeMaster[1].udpApp[0].typename = "UDPSink"
+*.nodeMaster[1].udpApp[0].localPort = 5000
 
 *.nodeSlave[*].udpApp[0].typename = "UDPBasicApp"
 *.nodeSlave[*].udpApp[0].destAddresses = "nodeMaster[0]"
@@ -78,7 +70,7 @@ num-rngs = 3
 *.nodeSlave[*].udpApp[0].destPort = 5000
 *.nodeSlave[*].udpApp[0].messageLength = exponential(128B)
 *.nodeSlave[*].udpApp[0].startTime = 2s
-*.nodeSlave[*].udpApp[0].sendInterval = exponential(200ms)
+*.nodeSlave[*].udpApp[0].sendInterval = exponential(100ms)
 #*.nodeSlave[*].udpApp[0].stopTime = # Default -1 (forever)
 #*.nodeSlave[*].udpApp[0].localPort = # Default -1
 #*.nodeSlave[*].udpApp[0].localAddress = # ""
@@ -90,11 +82,14 @@ num-rngs = 3
 #
 **.networkLayer.arpType = "GlobalARP"
 
-*.configurator.config = xml("<config><interface hosts='**' address='10.0.0.x' netmask='255.255.255.0'/><autoroute metric='errorRate'/></config>")
-*.configurator.optimizeRoutes = false
+**.configurator.config = xml("<config><interface hosts='**' address='10.0.0.x' netmask='255.255.255.0'/><autoroute metric='errorRate'/></config>")
+**.configurator.optimizeRoutes = false
 **.routingTable.netmaskRoutes = ""
-#**.configurator.optimizeRoutes = false
-#**.forwarding = true
+*.node**.forwarding = true
+
+# --- Use with AODV
+#*.configurator.addStaticRoutes = false
+
 
 #
 # NIC
@@ -120,25 +115,28 @@ num-rngs = 3
 
 # How to get parent index of parent?
 *.nodeSlave[0].wlan[*].mac.slaveId = 0 # Used to determine small offset in uplink slot --- Must be unique
-*.nodeSlave[1].wlan[*].mac.slaveId = 0 
-*.nodeSlave[2].wlan[*].mac.slaveId = 1 
-*.nodeSlave[3].wlan[*].mac.slaveId = 1 
+*.nodeSlave[1].wlan[*].mac.slaveId = 1 
+#*.nodeSlave[2].wlan[*].mac.slaveId = 1 
+#*.nodeSlave[3].wlan[*].mac.slaveId = 1 
 
-*.nodeSlave[0].wlan[*].mac.clusterId = 0 
-*.nodeSlave[1].wlan[*].mac.clusterId = 1
-*.nodeSlave[2].wlan[*].mac.clusterId = 0 
-*.nodeSlave[3].wlan[*].mac.clusterId = 1
+#*.nodeSlave[0].wlan[*].mac.clusterId = 0 
+#*.nodeSlave[1].wlan[*].mac.clusterId = 1
+#*.nodeSlave[2].wlan[*].mac.clusterId = 0 
+#*.nodeSlave[3].wlan[*].mac.clusterId = 1
 
 *.nodeMaster[0].wlan[*].mac.masterId = 0 # Used to assign static slots within frame --- Must be unique
-*.nodeMaster[1].wlan[*].mac.masterId = 1
+#*.nodeMaster[1].wlan[*].mac.masterId = 1
 
 *.nodeMaster[0].wlan[*].mac.clusterId = 0
-*.nodeMaster[1].wlan[*].mac.clusterId = 1
+#*.nodeMaster[1].wlan[*].mac.clusterId = 1
 
 *.node*[*].wlan[*].mac.slavesInCluster = ${SPM} # Used to let Master know how many control messages to expect in uplink slot
 
+# TODO Test minimum values
+**.slaveOffset = 10ms
+
 # TODO: Try this out again
-#*.node*[*].wlan[*].mac.bitrate = 2Mbps # How does this affect the transmitter bitrate?
+*.node*[*].wlan[*].mac.bitrate = 2Mbps # How does this affect the transmitter bitrate?
 #*.node*[*].wlan[*].mac.radioModule = "^.radio" # Path to radio module
 
 # --- Radio
@@ -154,13 +152,13 @@ num-rngs = 3
 # --- Radio: Transmitter / Receiver
 *.node*[*].wlan[*].radio.transmitter.bitrate = 2Mbps
 *.node*[*].wlan[*].radio.transmitter.preambleDuration = 0s
-*.node*[*].wlan[*].radio.transmitter.headerBitLength = 100b
-*.nodeMaster[*].wlan[*].radio.transmitter.communicationRange = 150m
-*.nodeSlave[*].wlan[*].radio.transmitter.communicationRange = 50m
-*.node*[*].wlan[*].radio.transmitter.detectionRange = 0m
+*.node*[*].wlan[*].radio.transmitter.headerBitLength = 0b
+*.nodeMaster[*].wlan[*].radio.transmitter.communicationRange = 250m
+*.nodeSlave[*].wlan[*].radio.transmitter.communicationRange = 100m
+*.node*[*].wlan[*].radio.transmitter.detectionRange = 999m
 *.node*[*].wlan[*].radio.transmitter.interferenceRange = 0m
 
-*.node*[*].wlan[0].radio.receiver.ignoreInterference = true
+*.node*[*].wlan[*].radio.receiver.ignoreInterference = true
 
 # --- General 
 #**.bitrate = 2Mbps
@@ -170,18 +168,18 @@ num-rngs = 3
 #
 *.nodeMaster[*].mobilityType = "CircleMobility"
 *.nodeMaster[*].**.cx = 500m
-*.nodeMaster[*].**.cy = 500m
+*.nodeMaster[*].**.cy = 125m
 *.nodeMaster[*].**.cz = 0m
-*.nodeMaster[*].**.r = 50m
+*.nodeMaster[*].**.r = 100m
 *.nodeMaster[*].**.startAngle = parentIndex() * (360deg/${NM})
 
 *.nodeSlave[*].mobilityType = "CircleMobility"
 *.nodeSlave[*].**.cx = 500m
-*.nodeSlave[*].**.cy = 500m
+*.nodeSlave[*].**.cy = 125m
 *.nodeSlave[*].**.cz = 0m
-*.nodeSlave[*].**.r = 75m
-*.nodeSlave[..1].**.startAngle = (parentIndex() * (360deg/${NM})) + 10deg
-*.nodeSlave[2..].**.startAngle = (parentIndex() * (360deg/${NM})) - 10deg
+*.nodeSlave[*].**.r = 150m
+*.nodeSlave[0].**.startAngle = (parentIndex() * (360deg/${NM})) + 10deg
+*.nodeSlave[1].**.startAngle = (parentIndex() * (360deg/${NM})) - 10deg
 
 #*.nodeSlave[..1].**.startAngle = (parentIndex() * (360deg/${NM})) + 5deg
 #*.nodeSlave[2..].**.startAngle = (parentIndex() * (360deg/${NM})) - 5deg # The rest
@@ -198,6 +196,9 @@ num-rngs = 3
 *.visualizer.networkRouteVisualizer.packetNameFilter = "UDPData*"
 #*.visualizer.mobilityVisualizer.displayMovementTrail = true
 
+[Config SlaveCollisions]
+extends = BaseConfig
+**.slaveOffset = 0.1ms
 
 [Config APSKRadio]
 extends = BaseConfig
