Working and tested for two AODV clusters with basic mobility.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -1,4 +1,5 @@
-[Config BaseConfig]
+[Config OneCluster]
+# TODO: Clean up restatement of default values
 network = Base
 #sim-time-limit = 500s
 
@@ -10,34 +11,33 @@ num-rngs = 3
 **.wlan[*].mac.rng-0 = 2
 
 #
-# Network Parameters
+# Clusters
 #
-*.radioMediumType = "IdealRadioMedium"
-
-# ... ... *sigh*
-*.radioMedium.mediumLimitCache.maxTransmissionDuration= 999s
-*.radioMedium.mediumLimitCache.minInterferenceTime = 999s
-
+# TODO: Make better use of iteration variables
 *.numMasters = ${NM=1}
 *.numSlaves = ${NS=(${NM})*2}
 *.slavesPerMaster = ${SPM=(${NS}/${NM})}
 
 #
+# Medium
+#
+*.radioMediumType = "IdealRadioMedium"
+# ... ... *sigh*
+*.radioMedium.mediumLimitCache.maxTransmissionDuration= 999s
+*.radioMedium.mediumLimitCache.minInterferenceTime = 999s
+#*.radioMedium.radioModeFilter = true # Do not send to radios which are no in recv or trancv
+*.radioMedium.propagationType = "ConstantTimePropagation" # Doesn't affect transmission durations which is bits/bitrate ...
+*.radioMedium.**.propagationTime = 0s
+
+#
 # Host
 #
-# https://omnetpp.org/doc/inet/api-current/neddoc/inet.node.inet.NodeBase.html
-# https://omnetpp.org/doc/inet/api-current/neddoc/inet.node.aodv.AODVRouter.html
-#
-# --- NodeBase
-#*.nodeMaster[*].hasStatus = false
+#*.nodeMaster[*].hasStatus = false # Lifecycle
 #*.nodeMaster[*].energyStorageType = ""
 #*.nodeMaster[*].energyGeneratorType = ""
-# --- StandardHost
 *.nodeMaster[*].numUdpApps = 1
 *.nodeSlave[*].numUdpApps = 1
-# --- AODVRouter
 # TODO: Explore AODV example/code
-# See link: routingtable, pcap, aodv(many parameters)
 
 #
 # Application
@@ -47,49 +47,29 @@ num-rngs = 3
 # --- Master 0
 *.nodeMaster[0].udpApp[0].typename = "UDPSink"
 *.nodeMaster[0].udpApp[0].localPort = 5000
-#*.nodeMaster[0].udpApp[0].startTime = # Default 0s
-#*.nodeMaster[0].udpApp[0].stopTime = # Default -1 (forever)
-
-
-# https://omnetpp.org/doc/inet/api-current/neddoc/index.html?p=inet.applications.udpapp.UDPBasicApp.html
-#
-#*.nodeMaster[1..].udpApp[0].typename = "UDPBasicApp"
-#*.nodeMaster[1..].udpApp[0].destAddresses = "nodeMaster[0]"
-#*.nodeMaster[1..].udpApp[0].packetName = "UDPDataMaster"
-#*.nodeMaster[1..].udpApp[0].destPort = 5000
-#*.nodeMaster[1..].udpApp[0].messageLength = exponential(128B)
-#*.nodeMaster[1..].udpApp[0].startTime = 30s
-#*.nodeMaster[1..].udpApp[0].sendInterval = exponential(100ms)
-
-*.nodeMaster[1].udpApp[0].typename = "UDPSink"
-*.nodeMaster[1].udpApp[0].localPort = 5000
 
 *.nodeSlave[*].udpApp[0].typename = "UDPBasicApp"
 *.nodeSlave[*].udpApp[0].destAddresses = "nodeMaster[0]"
 *.nodeSlave[*].udpApp[0].packetName = "UDPDataSlave1"
 *.nodeSlave[*].udpApp[0].destPort = 5000
 *.nodeSlave[*].udpApp[0].messageLength = exponential(128B)
-*.nodeSlave[*].udpApp[0].startTime = 2s
-*.nodeSlave[*].udpApp[0].sendInterval = exponential(100ms)
+*.nodeSlave[*].udpApp[0].startTime = 0s
+*.nodeSlave[*].udpApp[0].sendInterval = 100ms*(${NM} + 1) # One every frame
 #*.nodeSlave[*].udpApp[0].stopTime = # Default -1 (forever)
 #*.nodeSlave[*].udpApp[0].localPort = # Default -1
 #*.nodeSlave[*].udpApp[0].localAddress = # ""
 #*.nodeSlave[*].udpApp[0].timeToLive = # Default -1 (forever)
-# ... More params available
 
 #
 # Network
 #
 **.networkLayer.arpType = "GlobalARP"
+#**.configurator.config = xml("<config><interface hosts='**' address='10.0.0.x' netmask='255.255.255.0'/><autoroute metric='errorRate'/></config>")
+#**.configurator.optimizeRoutes = false
+#**.routingTable.netmaskRoutes = ""
 
-**.configurator.config = xml("<config><interface hosts='**' address='10.0.0.x' netmask='255.255.255.0'/><autoroute metric='errorRate'/></config>")
-**.configurator.optimizeRoutes = false
-**.routingTable.netmaskRoutes = ""
-*.node**.forwarding = true
-
-# --- Use with AODV
-#*.configurator.addStaticRoutes = false
-
+#*.node**.forwarding = true # Redundant with AODV
+*.configurator.addStaticRoutes = false # Important for AODV
 
 #
 # NIC
@@ -97,46 +77,30 @@ num-rngs = 3
 *.node*[*].wlan[*].typename = "WirelessNic"
 
 # --- MAC
-#
-# https://omnetpp.org/doc/inet/api-current/neddoc/inet.linklayer.lmac.LMacLayer.html
-#
+# TODO: Trim parameters
 *.node*[*].wlan[*].macType = "CubeMacLayer"
 *.node*[*].wlan[*].mac.address = "auto"
-*.node*[*].wlan[*].mac.slotDuration = 100ms # Make shorter?
+*.node*[*].wlan[*].mac.bitrate = 2Mbps # TODO: What is bitrate inheritence pattern?
+*.node*[*].wlan[*].mac.slotDuration = 100ms
 *.node*[*].wlan[*].mac.headerLength = 10B
 *.node*[*].wlan[*].mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
 *.node*[*].wlan[*].mac.numSlots = (${NM})+1 # +1 for the uplink slot
-*.node*[*].wlan[*].mac.queueLength = 10*${NM}
-# Added
-*.node*[*].wlan[*].mac.startTime = 1s
-*.node*[*].wlan[*].mac.timeoutDuration = 0.02s
+*.node*[*].wlan[*].mac.queueLength = 50 # TODO: Should be some function of slot length and packet generation
+
+*.node*[*].wlan[*].mac.startTime = 0s
+*.node*[*].wlan[*].mac.timeoutDuration = 20ms
 
 *.nodeSlave[*].wlan[*].mac.isSlave = true # Determines node behaviour mode
-
-# How to get parent index of parent?
-*.nodeSlave[0].wlan[*].mac.slaveId = 0 # Used to determine small offset in uplink slot --- Must be unique
+*.nodeSlave[0].wlan[*].mac.slaveId = 0 # Used to determine small offset in uplink slot --- Must be unique for now
 *.nodeSlave[1].wlan[*].mac.slaveId = 1 
-#*.nodeSlave[2].wlan[*].mac.slaveId = 1 
-#*.nodeSlave[3].wlan[*].mac.slaveId = 1 
-
-#*.nodeSlave[0].wlan[*].mac.clusterId = 0 
-#*.nodeSlave[1].wlan[*].mac.clusterId = 1
-#*.nodeSlave[2].wlan[*].mac.clusterId = 0 
-#*.nodeSlave[3].wlan[*].mac.clusterId = 1
-
 *.nodeMaster[0].wlan[*].mac.masterId = 0 # Used to assign static slots within frame --- Must be unique
-#*.nodeMaster[1].wlan[*].mac.masterId = 1
-
-*.nodeMaster[0].wlan[*].mac.clusterId = 0
-#*.nodeMaster[1].wlan[*].mac.clusterId = 1
+*.nodeMaster[0].wlan[*].mac.clusterId = 0 # Could be used to stop slaves from receiving from masters outside of cluster
 
 *.node*[*].wlan[*].mac.slavesInCluster = ${SPM} # Used to let Master know how many control messages to expect in uplink slot
-
-# TODO Test minimum values
-**.slaveOffset = 10ms
+**.slaveOffset = 10ms # Used for testing collision hypothesis
 
 # TODO: Try this out again
-*.node*[*].wlan[*].mac.bitrate = 2Mbps # How does this affect the transmitter bitrate?
+ # How does this affect the transmitter bitrate?
 #*.node*[*].wlan[*].mac.radioModule = "^.radio" # Path to radio module
 
 # --- Radio
@@ -144,64 +108,110 @@ num-rngs = 3
 # https://omnetpp.org/doc/inet/api-current/neddoc/inet.physicallayer.common.packetlevel.Radio.html
 # 
 *.node*[*].wlan[*].radioType = "IdealRadio"
-*.node*[*].wlan[0].radio.displayCommunicationRange = true
-
-# --- Radio: Medium (APSK)
-
+*.node*[*].wlan[*].radio.displayCommunicationRange = true
 
 # --- Radio: Transmitter / Receiver
 *.node*[*].wlan[*].radio.transmitter.bitrate = 2Mbps
 *.node*[*].wlan[*].radio.transmitter.preambleDuration = 0s
 *.node*[*].wlan[*].radio.transmitter.headerBitLength = 0b
-*.nodeMaster[*].wlan[*].radio.transmitter.communicationRange = 250m
-*.nodeSlave[*].wlan[*].radio.transmitter.communicationRange = 100m
 *.node*[*].wlan[*].radio.transmitter.detectionRange = 999m
 *.node*[*].wlan[*].radio.transmitter.interferenceRange = 0m
+*.nodeSlave[*].wlan[*].radio.transmitter.communicationRange = 100m
+*.nodeMaster[*].wlan[*].radio.transmitter.communicationRange = 235m
 
 *.node*[*].wlan[*].radio.receiver.ignoreInterference = true
-
-# --- General 
-#**.bitrate = 2Mbps
 
 #
 # Mobility
 #
 *.nodeMaster[*].mobilityType = "CircleMobility"
 *.nodeMaster[*].**.cx = 500m
-*.nodeMaster[*].**.cy = 125m
+*.nodeMaster[*].**.cy = 250m
 *.nodeMaster[*].**.cz = 0m
 *.nodeMaster[*].**.r = 100m
 *.nodeMaster[*].**.startAngle = parentIndex() * (360deg/${NM})
 
 *.nodeSlave[*].mobilityType = "CircleMobility"
 *.nodeSlave[*].**.cx = 500m
-*.nodeSlave[*].**.cy = 125m
+*.nodeSlave[*].**.cy = 250m
 *.nodeSlave[*].**.cz = 0m
 *.nodeSlave[*].**.r = 150m
 *.nodeSlave[0].**.startAngle = (parentIndex() * (360deg/${NM})) + 10deg
 *.nodeSlave[1].**.startAngle = (parentIndex() * (360deg/${NM})) - 10deg
 
-#*.nodeSlave[..1].**.startAngle = (parentIndex() * (360deg/${NM})) + 5deg
-#*.nodeSlave[2..].**.startAngle = (parentIndex() * (360deg/${NM})) - 5deg # The rest
-# Not working
-#*.nodeSlave[..((${NS}/${SPM})-1)].**.startAngle = ((parentIndex()/${SPM}) * (360deg/${NM})) + 5deg
-#*.nodeSlave[(${NS}/${SPM})..].**.startAngle = ((parentIndex()/${SPM}) * (360deg/${NM})) - 5deg # The rest?
-
 #
 # Visualization
 #
+# TODO: Examine visualizer documentation
 *.visualizer.physicalLinkVisualizer.packetNameFilter = "UDPData*"
 *.visualizer.dataLinkVisualizer.packetNameFilter = "UDPData*"
-#*.visualizer.dataLinkVisualizer.packetNameFilter = "AODV*"
 *.visualizer.networkRouteVisualizer.packetNameFilter = "UDPData*"
 #*.visualizer.mobilityVisualizer.displayMovementTrail = true
 
-[Config SlaveCollisions]
-extends = BaseConfig
+[Config SlaveCollisionsIdealRadio]
+extends = OneCluster
 **.slaveOffset = 0.1ms
 
+#
+#
+#
+
+[Config TwoClusters]
+# TODO: Seperate ini files
+# Have to redefine and reuse all iteration variables
+extends = OneCluster
+
+*.numMasters = ${NMT=2}
+*.numSlaves = ${NST=(${NMT})*2}
+*.slavesPerMaster = ${SPMT=(${NST}/${NMT})}
+
+*.node*[*].wlan[*].mac.numSlots = (${NMT})+1 # +1 for the uplink slot
+*.node*[*].wlan[*].mac.slavesInCluster = ${SPMT} # Used to let Master know how many control messages to expect in uplink slot
+
+# --- Works with both Master 1 as Sink and App
+*.nodeMaster[1].udpApp[0].typename = "UDPSink"
+*.nodeMaster[1].udpApp[0].localPort = 5000
+
+#*.nodeMaster[1].udpApp[0].typename = "UDPBasicApp"
+#*.nodeMaster[1].udpApp[0].destAddresses = "nodeMaster[0]"
+#*.nodeMaster[1].udpApp[0].packetName = "UDPDataMaster"
+#*.nodeMaster[1].udpApp[0].destPort = 5000
+#*.nodeMaster[1].udpApp[0].messageLength = exponential(128B)
+#*.nodeMaster[1].udpApp[0].startTime = 0s
+#*.nodeMaster[1].udpApp[0].sendInterval = 100ms*(${NMT} + 1) # One every frame
+
+*.nodeSlave[*].udpApp[0].sendInterval = 100ms*(${NM} + 1) # One every frame
+
+*.nodeSlave[0].wlan[*].mac.slaveId = 0 
+*.nodeSlave[1].wlan[*].mac.slaveId = 0 
+*.nodeSlave[2].wlan[*].mac.slaveId = 1 
+*.nodeSlave[3].wlan[*].mac.slaveId = 1 
+
+*.nodeSlave[0].wlan[*].mac.clusterId = 0 
+*.nodeSlave[1].wlan[*].mac.clusterId = 1
+*.nodeSlave[2].wlan[*].mac.clusterId = 0 
+*.nodeSlave[3].wlan[*].mac.clusterId = 1
+
+*.nodeMaster[0].wlan[*].mac.masterId = 0 
+*.nodeMaster[1].wlan[*].mac.masterId = 1
+
+*.nodeMaster[0].wlan[*].mac.clusterId = 0 
+*.nodeMaster[1].wlan[*].mac.clusterId = 1 
+
+*.nodeMaster[*].**.startAngle = parentIndex() * (360deg/${NMT})
+*.nodeSlave[..1].**.startAngle = (parentIndex() * (360deg/${NMT})) + 10deg
+*.nodeSlave[2..].**.startAngle = (parentIndex() * (360deg/${NMT})) - 10deg
+
+[Config TwoClustersMoving]
+extends = TwoClusters
+**.speed = 2mps
+
+#
+#
+#
+
 [Config APSKRadio]
-extends = BaseConfig
+extends = OneCluster
 
 *.radioMediumType = "APSKScalarRadioMedium"
 *.radioMedium.backgroundNoise.power = -110dBm 
@@ -215,11 +225,19 @@ extends = BaseConfig
 *.node*[*].wlan[*].radio.transmitter.power = 2mW 
 *.node*[*].wlan[*].radio.transmitter.preambleDuration = 0s 
 *.node*[*].wlan[*].radio.transmitter.headerBitLength = 100b 
-*.host[*].wlan[*].radio.transmitter.modulation = "BPSK"
+*.node*[*].wlan[*].radio.transmitter.modulation = "BPSK"
 
 *.node*[*].wlan[*].radio.receiver.sensitivity = -85dBm 
 *.node*[*].wlan[*].radio.receiver.energyDetection = -85dBm 
 *.node*[*].wlan[*].radio.receiver.snirThreshold = 4dB 
+
+[Config SlaveCollisionsAPSKRadio]
+extends = APSKRadio
+**.slaveOffset = 0.1ms
+
+#
+#
+#
 
 [Config EnergyModelling]
 extends = APSKRadio
