--- a/Simulation/OMNeT++/CubeSats/.tkenvrc
+++ b/Simulation/OMNeT++/CubeSats/.tkenvrc
@@ -1,4 +1,4 @@
 # Partial OMNeT++/Tkenv config file -- see $HOME/.tkenvrc as well
-config default-configname	{One}
+config default-configname	{TwoClusters}
 config default-runnumber	{0}
 
