Discarded vector based CDMA solutions. Only minor changes remaining to radio code.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -50,7 +50,7 @@ num-rngs = 3
 
 *.nodeSlave[*].udpApp[0].typename = "UDPBasicApp"
 *.nodeSlave[*].udpApp[0].destAddresses = "nodeMaster[0]"
-*.nodeSlave[*].udpApp[0].packetName = "UDPDataSlave1"
+*.nodeSlave[*].udpApp[0].packetName = "UDPDataSlave"
 *.nodeSlave[*].udpApp[0].destPort = 5000
 *.nodeSlave[*].udpApp[0].messageLength = exponential(128B)
 *.nodeSlave[*].udpApp[0].startTime = 0s
@@ -204,7 +204,8 @@ extends = OneCluster
 
 [Config TwoClustersMoving]
 extends = TwoClusters
-**.speed = 2mps
+**nodeMaster**.speed = 10mps
+**nodeSlave**.speed = 15mps
 
 #
 #
@@ -218,6 +219,9 @@ extends = OneCluster
 *.radioMedium.mediumLimitCache.carrierFrequency = 2GHz 
 
 *.node*[*].wlan[*].radioType = "APSKScalarRadio" 
+# Seem to only want to work with 802.11
+#*.node*[*].wlan[0].radio.transmitterType = "APSKLayeredTransmitter"
+#*.node*[*].wlan[0].radio.receiverType = "APSKLayeredReceiver"
 
 *.node*[*].wlan[0].radio.carrierFrequency = 2.412GHz 
 *.node*[*].wlan[0].radio.bandwidth = 2MHz 
