Simultaneous CDMA-esc reception working for ideal radios. APSK radio medium appears to blocking reception during 'isReceptionAttempted' calculation.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -91,16 +91,11 @@ num-rngs = 3
 *.node*[*].wlan[*].mac.timeoutDuration = 20ms
 
 *.nodeSlave[*].wlan[*].mac.isSlave = true # Determines node behaviour mode
-*.nodeSlave[0].wlan[*].mac.slaveId = 0 # Used to determine small offset in uplink slot --- Must be unique for now
-*.nodeSlave[1].wlan[*].mac.slaveId = 1 
-*.nodeMaster[0].wlan[*].mac.masterId = 0 # Used to assign static slots within frame --- Must be unique
+*.nodeSlave[*].wlan[*].mac.clusterId = 0 
 *.nodeMaster[0].wlan[*].mac.clusterId = 0 # Could be used to stop slaves from receiving from masters outside of cluster
 
 *.node*[*].wlan[*].mac.slavesInCluster = ${SPM} # Used to let Master know how many control messages to expect in uplink slot
-**.slaveOffset = 10ms # Used for testing collision hypothesis
 
-# TODO: Try this out again
- # How does this affect the transmitter bitrate?
 #*.node*[*].wlan[*].mac.radioModule = "^.radio" # Path to radio module
 
 # --- Radio
@@ -148,10 +143,6 @@ num-rngs = 3
 *.visualizer.networkRouteVisualizer.packetNameFilter = "UDPData*"
 #*.visualizer.mobilityVisualizer.displayMovementTrail = true
 
-[Config SlaveCollisionsIdealRadio]
-extends = OneCluster
-**.slaveOffset = 0.1ms
-
 #
 #
 #
@@ -182,18 +173,10 @@ extends = OneCluster
 
 *.nodeSlave[*].udpApp[0].sendInterval = 100ms*(${NM} + 1) # One every frame
 
-*.nodeSlave[0].wlan[*].mac.slaveId = 0 
-*.nodeSlave[1].wlan[*].mac.slaveId = 0 
-*.nodeSlave[2].wlan[*].mac.slaveId = 1 
-*.nodeSlave[3].wlan[*].mac.slaveId = 1 
-
 *.nodeSlave[0].wlan[*].mac.clusterId = 0 
 *.nodeSlave[1].wlan[*].mac.clusterId = 1
 *.nodeSlave[2].wlan[*].mac.clusterId = 0 
 *.nodeSlave[3].wlan[*].mac.clusterId = 1
-
-*.nodeMaster[0].wlan[*].mac.masterId = 0 
-*.nodeMaster[1].wlan[*].mac.masterId = 1
 
 *.nodeMaster[0].wlan[*].mac.clusterId = 0 
 *.nodeMaster[1].wlan[*].mac.clusterId = 1 
@@ -211,33 +194,34 @@ extends = TwoClusters
 #
 #
 
+# Currently not allowing 'simultaneous' reception
 [Config APSKRadio]
 extends = OneCluster
 
 *.radioMediumType = "APSKScalarRadioMedium"
-*.radioMedium.backgroundNoise.power = -110dBm 
-*.radioMedium.mediumLimitCache.carrierFrequency = 2GHz 
+*.radioMedium.backgroundNoise.power = -110dBm
+
+# Issue not at the cache
+*.radioMedium.mediumLimitCache.carrierFrequency = 2.412GHz 
+*.radioMedium.mediumLimitCache.maxTransmissionDuration= 999s
+*.radioMedium.mediumLimitCache.minInterferenceTime = 999s
+
+*.radioMedium.propagationType = "ConstantTimePropagation"
+*.radioMedium.**.propagationTime = 0s
 
 *.node*[*].wlan[*].radioType = "APSKScalarRadio" 
-# Seem to only want to work with 802.11
-#*.node*[*].wlan[0].radio.transmitterType = "APSKLayeredTransmitter"
-#*.node*[*].wlan[0].radio.receiverType = "APSKLayeredReceiver"
 
 *.node*[*].wlan[0].radio.carrierFrequency = 2.412GHz 
 *.node*[*].wlan[0].radio.bandwidth = 2MHz 
 
 *.node*[*].wlan[*].radio.transmitter.power = 2mW 
 *.node*[*].wlan[*].radio.transmitter.preambleDuration = 0s 
-*.node*[*].wlan[*].radio.transmitter.headerBitLength = 100b 
+*.node*[*].wlan[*].radio.transmitter.headerBitLength = 0b 
 *.node*[*].wlan[*].radio.transmitter.modulation = "BPSK"
 
 *.node*[*].wlan[*].radio.receiver.sensitivity = -85dBm 
 *.node*[*].wlan[*].radio.receiver.energyDetection = -85dBm 
 *.node*[*].wlan[*].radio.receiver.snirThreshold = 4dB 
-
-[Config SlaveCollisionsAPSKRadio]
-extends = APSKRadio
-**.slaveOffset = 0.1ms
 
 #
 #
