Slaves and masters using CubeMac are now capable of sending multiple packets per slot.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -54,7 +54,7 @@ num-rngs = 3
 *.nodeSlave[*].udpApp[0].destPort = 5000
 *.nodeSlave[*].udpApp[0].messageLength = exponential(128B)
 *.nodeSlave[*].udpApp[0].startTime = 0s
-*.nodeSlave[*].udpApp[0].sendInterval = 100ms*(${NM} + 1) # One every frame
+*.nodeSlave[*].udpApp[0].sendInterval = exponential(10ms*(${NM} + 1))
 #*.nodeSlave[*].udpApp[0].stopTime = # Default -1 (forever)
 #*.nodeSlave[*].udpApp[0].localPort = # Default -1
 #*.nodeSlave[*].udpApp[0].localAddress = # ""
@@ -87,6 +87,7 @@ num-rngs = 3
 *.node*[*].wlan[*].mac.numSlots = (${NM})+1 # +1 for the uplink slot
 *.node*[*].wlan[*].mac.queueLength = 50 # TODO: Should be some function of slot length and packet generation
 
+*.node*[*].wlan[*].mac.slotPadding = 10ms
 *.node*[*].wlan[*].mac.startTime = 0s
 *.node*[*].wlan[*].mac.timeoutDuration = 20ms
 
